--- a/Introduction.html
+++ b/Introduction.html
@@ -1,10 +1,15 @@
 <html>
 <head>
 <title>
-Introduction to html
+Manoharveeravalli
 </title>
 <h1>
 Introduction for HTML</h1>
+<h1>
+MyName : Veeravalli Manohar
+College: Vignan University
+Stream : Computer Science and Engineering
+</h1>
 </head>
 <body>
 <p>
