--- a/Introduction.html
+++ b/Introduction.html
@@ -3,15 +3,10 @@
 <title>
 Manoharveeravalli
 </title>
-<h1>
-Introduction for HTML</h1>
-<h1>
-MyName : Veeravalli Manohar
-College: Vignan University
-Stream : Computer Science and Engineering
-</h1>
+
 </head>
 <body>
+<img src="Vignan.jpg" align="right" top="0">
 <p>
 HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning and structure of web content. Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript).
 
