--- a/list.html
+++ b/list.html
@@ -5,24 +5,26 @@ Lists
 </h1>
 </head>
 <body>
-<p>Ordered List of courses I have attended</p>
 <ol type="1">
 <li>Inter</li>
-<ol type="1">
+<ul type="1">
 <li>MPC</li>
-</ol>
+</ul>
 <li>B.tech</li>
-<ol type="1">
+<ul type="circle">
 <li>CSE</li>
-<ol type="1">
+
+<ul type="disc">
 <li>C Programming</li>
 <li>Java Programming</li>
 <li>Python Programming</li>
+</ul>
+</ul>
 </ol>
-</ol>
-</ol>
-<p>Unordered List of courses</p>
-<ul type="disc">
+
+
+
+<ol type="1">
 <li>Web Technologies</li>
 <ul type="circle">
 <li>Servlets</li>
@@ -34,6 +36,6 @@ Lists
 <li>Pointers</li>
 </ul>
 
-</ul>
+</ol>
 </body>
 </html>
