Added CSS files

--- a/register.html
+++ b/register.html
@@ -1,5 +1,12 @@
 <html>
 <head>
+<style>
+form{
+border:1px solid black;
+padding:2px;
+
+}
+</style>
 </head>
 <body>
 <form method="get" >
@@ -10,7 +17,7 @@ Last Name
 <input type="text" id="lname" name="lname"><br>
 CollegeName
 <input type="text" id="Cname" name="Cname"><br>
-registe Number
+register Number
 <input type="text" id="rno" name="rno">
 <br>
 <input type="Submit" Value="Submit">
