--- a/form.html
+++ b/form.html
@@ -1,49 +1,54 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <style>
 form {
 vertical-align: middle;
 border: 1px solid black;
+padding:2px;
+margin:2px;
 }
+
 .content {
   max-width: 500px;
   margin: auto;
   background: white;
-  padding: 10px;
 }
-h1{
-max-width: 500px;
-  margin: auto;
-  background: white;
-  padding: 10px;
+a{
+border:1px solid black;
+background-color:white;
+color:black;
+text-decoration:none;
+margin-left:300px;
 }
 </style>
 
 <title>
 Form
 </title>
-<h1>Form for Registration</h1>
 </head>
 <body>
+
+<h1>Form for Registration</h1>
 <div class="content">
-<form>
+<form action="main.jsp" method="get">
 Name :
 <input type="text" id="name" name="name"><br><br>
 Phone No:
 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br><br>
 Choice of course:<br>
-
 <input type="radio" name="Bachelors">Bacherlors<br>
 <input type="radio" name="Masters">Masters<br><br>
 Description:<br>
-<input type="textarea" name="Description" rows="10" cols="30">
+<textarea name="Description" rows="10" cols="30"></textarea>
 <br><br>
 Subject Interests:<br>
 <input type="checkbox" name="programming">C programming<br>
 <input type="checkbox" name="programming">C++ programming<br>
 <input type="checkbox" name="programming">python programming<br>
 <input type="checkbox" name="programming">Java programming<br><br>
-<input type="submit" value="submit">
+<a href="personaldetails.html">Submit</a>
 </form>
 </div>
 </body>
